--- a/index.html
+++ b/index.html
@@ -1,18 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XXXIII - Ismália</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<header>
-    <h1>XXXIII - Ismália</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>XXXIII - Ismália</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <header>
+        <h1>XXXIII - Ismália</h1>
 
-    <p>Por Alphonsus de Guimaraens</p>
-</header>
-<body>
-    
-</body>
+        <p id="autor">Por <a href="https://www.escritas.org/pt/t/12902/xxxiii-ismalia" target="blank"> Alphonsus de Guimaraens</a></p>
+    </header>
+    <body>
+        <main>
+            <section>
+                <p>  
+                Quando Ismália enlouqueceu, <br>
+                Pôs-se na torre a sonhar... <br>
+                Viu uma lua no céu, <br>
+                Viu outra lua no mar.
+                </p> 
+            </section>
+
+            <section>
+                <p>
+                No sonho em que se perdeu, <br>
+                Banhou-se toda em luar... <br>
+                Queria subir ao céu, <br>
+                Queria descer ao mar...
+                </p> 
+            </section>
+
+            <section class="imagem1">
+                <p>
+                E, no desvario seu, <br>
+                Na torre pôs-se a cantar... <br>
+                Estava perto do céu, <br>
+                Estava longe do mar...
+                </p> 
+            </section>
+
+            <section>
+                <p>
+                E como um anjo pendeu <br>
+                As asas para voar... <br>
+                Queria a lua do céu, <br>
+                Queria a lua do mar...
+                </p> 
+            </section>
+
+            <section class="imagem2">
+                <p>
+                As asas que Deus lhe deu <br>
+                Ruflaram de par em par... <br>
+                Sua alma subiu ao céu, <br>
+                Seu corpo desceu ao mar...
+                </p> 
+            </section>
+        </main>
+
+        <footer>
+            Site criado por <a href="https://github.com/GisaLucia" target="blank">Giselle Lucia</a> para o <a href="https://www.cursoemvideo.com" target="blank">CursoemVideo</a>
+        </footer>
+    </body>
 </html>
